# pytapl

./: .gitattributes  .gitignore  README.md  pyproject.toml
01_arith/: grammar.lark  parser.py  run.py
02_untyped/: grammar.lark  parser.py  run.py
03_simplebool/: context.py  grammar.lark  nodes.py  parser.py  run.py
04_rcdsub/: context.py  grammar.lark  nodes.py  parser.py  run.py
05_recon/: context.py  grammar.lark  nodes.py  parser.py  run.py  tests.py
06_system_f/: context.py  grammar.lark  nodes.py  parser.py  run.py
extras/: systemf.f
