[tool.poetry]
name = "pytapl"
version = "0.1.0"
description = ""
authors = ["iamkroot <kroot.patel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lark-parser = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
